Fixed invisible contact names in create modal

--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -1294,10 +1294,6 @@ to {
 	float:left;
 }
 
-#contactFirst, #contactLast {
-	color:#fff;
-}
-
 #detailmenubar img {
 	width:50px;
 	cursor:pointer;
